# attendable

./: .dockerignore  .env.example  .env.local.example  .gitattributes  .gitignore  LICENSE  QUICKSTART.md  README.md  install.js  main.py  pinokio.js  pyproject.toml  reset.js  start.js  update.js
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_event_interests.py
event_agent/agents/: base.py  classifier_agent.py  crew.py  discovery_agent.py  location_agent.py
event_agent/api/: main.py  scheduler.py
event_agent/api/routes/: backup.py  config.py  events.py  setup.py  ui.py
event_agent/config/: settings.py
event_agent/db/: engine.py  models.py  repository.py
event_agent/scrapers/: base.py  eventbrite.py  luma.py  meetup.py  web_search.py
scripts/: backup.py  migrate_pg_to_sqlite.py
tests/: conftest.py  test_api_routes.py  test_crew_pipeline.py  test_eventbrite_scraper.py  test_location_agent.py  test_luma_scraper.py
